--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Gert&#39;s site</title>
+<title>Gert&#39;s Stories</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -56,20 +56,20 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Gert&#39;s site" />
+</noscript><meta property="og:title" content="Gert&#39;s Stories" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://example.org/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Gert&#39;s site"/>
+<meta name="twitter:title" content="Gert&#39;s Stories"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Gert's site",
+  "name": "Gert's Stories",
   "url": "http://example.org/",
   "description": "",
   "thumbnailUrl": "http://example.org/favicon.ico",
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://example.org/" accesskey="h" title="Gert&#39;s site (Alt + H)">Gert&#39;s site</a>
+            <a href="http://example.org/" accesskey="h" title="Gert&#39;s Stories (Alt + H)">Gert&#39;s Stories</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -127,7 +127,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="http://example.org/">Gert&#39;s site</a></span>
+    <span>&copy; 2022 <a href="http://example.org/">Gert&#39;s Stories</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
